[refactor]: Adjust the avatar and AboutMe. [scope]: Project [note]:   1. Adjust the avatar and AboutMe sections into cards and add configuration control.   2. Adjust and optimize code display.   3. Fix the bug where dragging the window causes the avatar to become distorted.

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -43,42 +43,6 @@ main {
   display: none;
 }
 
-.main-left .avatar_img {
-  width: 85%;
-  position: relative;
-  aspect-ratio: 1/1;
-  margin-top: 50px;
-  background-size: cover;
-  border-radius: 50%;
-  background-color: var(--white-background-color);
-  transform: scale(0.9);
-}
-
-.main-left .about-me {
-  margin-top: -6px;
-  font-size: 20px;
-}
-
-.main-left .author-tag1 {
-  position: absolute;
-  right: -60px;
-  bottom: 35px;
-  background: var(--card-background-color);
-  padding: 5px 10px;
-  border-radius: 40px; 
-  animation: float 2s infinite;
-}
-
-.main-left .author-tag2 {
-  position: absolute;
-  right: -30px;
-  bottom: 0px;
-  background: var(--card-background-color);
-  padding: 5px 10px;
-  border-radius: 40px; 
-  animation: float 2s infinite;
-}
-
 .main-left .card {
   margin-top: 10px;
   padding: 15px;
@@ -86,6 +50,44 @@ main {
   border-radius: 10px;
   text-align: left;
   width: 80%;
+  position: relative;
+}
+
+.main-left .card#author {
+  background: none;
+}
+
+.main-left .card#author img {
+  border-radius: 50%;
+  width: 85%;
+  display: block;
+  margin: auto;
+}
+
+.main-left .card#author .author-tag1,
+.main-left .card#author .author-tag2 {
+  position: absolute;
+  background: var(--card-background-color);
+  padding: 5px 10px;
+  border-radius: 40px;
+  animation: float 2s infinite;
+}
+.main-left .card#author .author-tag1 {
+  right: 0px;
+  bottom: 45px;
+}
+
+.main-left .card#author .author-tag2 {
+  right: 10px;
+  bottom: 10px;
+}
+
+.main-left .card#author-aboutme {
+  background: none;
+  padding: 0px;
+  margin-top: -30px;
+  font-size: 25px;
+  text-align: center;
 }
 
 .main-left .card#author-info p {
@@ -99,27 +101,27 @@ main {
   perspective: 1000;
 }
 
-.main-left .card#card-wechat:hover .flip-content{
+.main-left .card#card-wechat:hover .flip-content {
   -webkit-transform: rotateY(180deg);
   transform: rotateY(180deg);
 }
 
-.card#card-wechat .flip-content {
+.main-left .card#card-wechat .flip-content {
   width: 240px;
   height: 100px;
   transform-style: preserve-3d;
   transition: cubic-bezier(0, 0, 0, 1.29) 1.2s;
 }
 
-.card#card-wechat .flip-content .front,
-.card#card-wechat .flip-content .back {
+.main-left .card#card-wechat .flip-content .front,
+.main-left .card#card-wechat .flip-content .back {
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
   position: absolute;
 }
 
-.card#card-wechat .flip-content .back {
+.main-left .card#card-wechat .flip-content .back {
   transform: rotateY(180deg);
 }
 
@@ -161,7 +163,47 @@ main {
   background: var(--social-icon-color);
   align-items: center;
   justify-content: center;
-  transition: all 1s linear(0 0%, 0 2.27%, 0.02 4.53%, 0.04 6.8%, 0.06 9.07%, 0.1 11.33%, 0.14 13.6%, 0.25 18.15%, 0.39 22.7%, 0.56 27.25%, 0.77 31.8%, 1 36.35%, 0.89 40.9%, 0.85 43.18%, 0.81 45.45%, 0.79 47.72%, 0.77 50%, 0.75 52.27%, 0.75 54.55%, 0.75 56.82%, 0.77 59.1%, 0.79 61.38%, 0.81 63.65%, 0.85 65.93%, 0.89 68.2%, 1 72.7%, 0.97 74.98%, 0.95 77.25%, 0.94 79.53%, 0.94 81.8%, 0.94 84.08%, 0.95 86.35%, 0.97 88.63%, 1 90.9%, 0.99 93.18%, 0.98 95.45%, 0.99 97.73%, 1 100%);
+  transition: all 1s
+    linear(
+      0 0%,
+      0 2.27%,
+      0.02 4.53%,
+      0.04 6.8%,
+      0.06 9.07%,
+      0.1 11.33%,
+      0.14 13.6%,
+      0.25 18.15%,
+      0.39 22.7%,
+      0.56 27.25%,
+      0.77 31.8%,
+      1 36.35%,
+      0.89 40.9%,
+      0.85 43.18%,
+      0.81 45.45%,
+      0.79 47.72%,
+      0.77 50%,
+      0.75 52.27%,
+      0.75 54.55%,
+      0.75 56.82%,
+      0.77 59.1%,
+      0.79 61.38%,
+      0.81 63.65%,
+      0.85 65.93%,
+      0.89 68.2%,
+      1 72.7%,
+      0.97 74.98%,
+      0.95 77.25%,
+      0.94 79.53%,
+      0.94 81.8%,
+      0.94 84.08%,
+      0.95 86.35%,
+      0.97 88.63%,
+      1 90.9%,
+      0.99 93.18%,
+      0.98 95.45%,
+      0.99 97.73%,
+      1 100%
+    );
 }
 
 .main-right .social-icon:hover {
@@ -169,7 +211,7 @@ main {
   background: var(--social-icon-color);
 }
 
-.main-right .social-icon-img img{
+.main-right .social-icon-img img {
   margin-top: 3px;
   transform: scale(0.4);
 }
@@ -199,7 +241,7 @@ main {
 }
 
 .main-right .blog-archives-section .timeline .timeline-item::before {
-  content: '';
+  content: "";
   width: 10px;
   height: 10px;
   background: #ffffff;
@@ -285,11 +327,12 @@ canvas {
     margin: 0 10px;
   }
 
-  .main-left, .main-right {
+  .main-left,
+  .main-right {
     width: 100%;
     height: auto;
     padding: 10px;
-    position: relative; 
+    position: relative;
   }
 
   .main-left .avatar_img {
@@ -301,7 +344,7 @@ canvas {
     font-size: 30px;
     bottom: 80px;
   }
-  
+
   .main-left .author-tag2 {
     font-size: 30px;
   }
@@ -366,7 +409,7 @@ canvas {
     bottom: 35px;
     font-size: 15px;
   }
-  
+
   .main-left .author-tag2 {
     font-size: 15px;
   }
